<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:orientation="vertical"
    tools:context=".Login.LoginView">

    <TextView
        android:id="@+id/userIdText"
        android:layout_width="match_parent"
        android:height="75dp"
        android:layout_height="wrap_content"
        android:text="@string/user_id" />

    <EditText
        android:id="@+id/userIdEdit"
        android:height="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_user_id"
        android:inputType="number"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/passwordText"
        android:height="75dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/passwordEdit"
        android:height="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textWebPassword"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/loginButton"
        android:height="75dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:id="@+id/regButton"
        android:height="75dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />
</LinearLayout>