<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".Register.RegisterView">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textSize="30sp"
        android:text="@string/user_registration"
        />

    <EditText
        android:id="@+id/username"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/username"
        android:layout_marginHorizontal="10dp"

        />
    <EditText
        android:id="@+id/email"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:hint="@string/email"
        android:layout_marginHorizontal="10dp"

        />
    <EditText
        android:id="@+id/password"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="50dp"
        android:maxLines="1"
        android:inputType="textWebPassword"
        android:hint="@string/password"
        android:layout_marginHorizontal="10dp"

        />
    <EditText
        android:id="@+id/uid"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/user_id"
        android:layout_marginHorizontal="10dp"

        />
    <EditText
        android:id="@+id/shopid"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:inputType="text"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:hint="@string/shopId_refer_smartCard"
        android:layout_marginHorizontal="10dp"

        />
    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"/>



</LinearLayout>